# gcp-datastore-lookup-api

./: Dockerfile  GCP Cloud Run Template API.postman_collection.json  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml
infrastructure/: cloudbuild.yaml
infrastructure/cloudrun-apis/: gcp-cloud-run-template-api.yaml
openapi/: gcp_cloud_run_template_api.yaml  gcp_datastore_lookup_api.yaml
src/: main.py
src/configuration/: env.py  logger_config.py
src/core/: database.py  request.py
src/error/: custom_exceptions.py
src/gcp/: datastore.py  gcs.py  pubsub.py  secret.py  utils.py
src/pydantic_model/: api_model.py
src/resources/: logging.ini
src/service/: dependencies.py  logger.py
src/utils/: helper.py
tests/integration_tests/: conftest.py  test_api.py  test_api_pubsub.py  test_gcs_int.py
tests/integration_tests/api/data/: gcs_event_data.py  test_consumer_endpoint.json  test_gcs_upload_file.json
tests/integration_tests/data/: test_account_data.json  test_customer_data.json
tests/integration_tests/google_storage_emulator/: DockerfileTestPrep  requirements.txt
tests/integration_tests/utils/: cloud_storage_utils.py  pubsub_utils.py
tests/unit_tests/: test_datastore.py  test_helper.py
tests/unit_tests/cloud/: test_gcs.py  test_pubsub.py  test_secret_manager.py
