[tool.poetry]
name = "gcp-datastore-lookup-api"
version = "0.1.0"
description = ""
authors = ["Bashir <thebashtm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
python-json-logger = "==2.0.7"
gunicorn = "==21.2.0"
uvicorn = "==0.28.0"
pydantic = {version = "==2.6.3", extras = ["email"]}
fastapi = "==0.100.0"
pendulum = "==2.1.2"
google-cloud-secret-manager = "==2.18.3"
datamodel-code-generator = "^0.25.5"
pytest-asyncio = "^0.21.1"
pydantic-settings = "==2.0.3"
google-cloud-datastore = "==2.7.1"

[tool.poetry.dev-dependencies]
pytest = "*"
requests = "*"
pendulum = "*"
httpx = "^0.24.1"

[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"